--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -14,13 +14,13 @@ service routing protocols model multi-agent
 !
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
-hostname cv-pathfinder-transit
+hostname cv-pathfinder-edge2A
 !
 router adaptive-virtual-topology
-   topology role transit region
+   topology role edge
    region AVD_Land_West id 42
    zone DEFAULT-ZONE id 1
-   site Site422 id 422
+   site Site423 id 423
    !
    policy DEFAULT-AVT-POLICY
       !
@@ -52,14 +52,6 @@ router adaptive-virtual-topology
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
-   policy TRANSIT-AVT-POLICY
-      !
-      match application-profile VOICE
-         avt profile TRANSIT-AVT-POLICY-VOICE
-      !
-      match application-profile default
-         avt profile TRANSIT-AVT-POLICY-DEFAULT
-   !
    profile CONTROL-PLANE-PROFILE
       path-selection load-balance LB-CONTROL-PLANE-PROFILE
    !
@@ -78,12 +70,6 @@ router adaptive-virtual-topology
    profile PROD-AVT-POLICY-VOICE
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
    !
-   profile TRANSIT-AVT-POLICY-DEFAULT
-      path-selection load-balance LB-TRANSIT-AVT-POLICY-DEFAULT
-   !
-   profile TRANSIT-AVT-POLICY-VOICE
-      path-selection load-balance LB-TRANSIT-AVT-POLICY-VOICE
-   !
    vrf default
       avt policy DEFAULT-AVT-POLICY-WITH-CP
       avt profile DEFAULT-AVT-POLICY-DEFAULT id 1
@@ -100,11 +86,6 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
-   !
-   vrf TRANSIT
-      avt policy TRANSIT-AVT-POLICY
-      avt profile TRANSIT-AVT-POLICY-DEFAULT id 1
-      avt profile TRANSIT-AVT-POLICY-VOICE id 42
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -112,7 +93,7 @@ router path-selection
    path-group INET id 101
       ipsec profile CP-PROFILE
       !
-      local interface Ethernet1.42
+      local interface Ethernet1
          stun server-profile INET-cv-pathfinder-pathfinder-Ethernet1 INET-cv-pathfinder-pathfinder-Ethernet3
       !
       peer dynamic
@@ -122,49 +103,43 @@ router path-selection
          ipv4 address 10.7.7.7
          ipv4 address 10.9.9.9
    !
-   path-group MPLS id 100
+   path-group LAN_HA id 65535
+      ipsec profile DP-PROFILE
+      flow assignment lan
       !
-      local interface Ethernet2.42
-         stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
+      local interface Ethernet52
       !
-      peer dynamic
+      local interface Ethernet53
       !
-      peer static router-ip 192.168.144.1
-         name cv-pathfinder-pathfinder
-         ipv4 address 172.16.0.1
+      peer static router-ip 192.168.142.3
+         name cv-pathfinder-edge2B
+         ipv4 address 172.17.0.9
+         ipv4 address 172.17.0.11
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
-      path-group MPLS
+      path-group LAN_HA
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
       path-group INET
-      path-group MPLS priority 42
+      path-group LAN_HA
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
       path-group INET
-      path-group MPLS
+      path-group LAN_HA
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
       path-group INET
-      path-group MPLS priority 2
+      path-group LAN_HA
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
       loss-rate 42.0
-      path-group MPLS
+      path-group LAN_HA
       path-group INET priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
       jitter 42
-      path-group MPLS
-      path-group INET priority 2
-   !
-   load-balance policy LB-TRANSIT-AVT-POLICY-DEFAULT
-      path-group INET
-      path-group MPLS priority 2
-   !
-   load-balance policy LB-TRANSIT-AVT-POLICY-VOICE
-      path-group MPLS
+      path-group LAN_HA
       path-group INET priority 2
 !
 spanning-tree mode none
@@ -178,12 +153,13 @@ vrf instance MGMT
 !
 vrf instance PROD
 !
-vrf instance TRANSIT
-!
 ip security
    !
+   ike policy DP-IKE-POLICY
+      local-id 192.168.142.2
+   !
    ike policy CP-IKE-POLICY
-      local-id 192.168.143.1
+      local-id 192.168.142.2
    !
    sa policy DP-SA-POLICY
       esp encryption aes128
@@ -194,6 +170,7 @@ ip security
       pfs dh-group 14
    !
    profile DP-PROFILE
+      ike-policy DP-IKE-POLICY
       sa-policy DP-SA-POLICY
       connection start
       shared-key 7 ABCDEF1234567890666
@@ -215,42 +192,75 @@ interface Dps1
    description DPS Interface
    mtu 9214
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 192.168.143.1/32
+   ip address 192.168.142.2/32
 !
 interface Ethernet1
    no shutdown
    no switchport
-!
-interface Ethernet1.42
-   no shutdown
-   encapsulation dot1q vlan 42
    flow tracker hardware WAN-FLOW-TRACKER
    ip address dhcp
    dhcp client accept default-route
 !
-interface Ethernet2
+interface Ethernet52
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1
    no shutdown
+   mtu 9214
    no switchport
-!
-interface Ethernet2.42
-   no shutdown
-   encapsulation dot1q vlan 666
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 172.16.6.6/31
+   ip address 172.17.0.5/31
+!
+interface Ethernet52.42
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.42_vrf_PROD
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 42
+   vrf PROD
+   ip address 172.17.0.5/31
+!
+interface Ethernet52.100
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.100_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 100
+   vrf IT
+   ip address 172.17.0.5/31
+!
+interface Ethernet53
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1
+   no shutdown
+   mtu 9214
+   no switchport
+   flow tracker hardware WAN-FLOW-TRACKER
+   ip address 172.17.0.7/31
+!
+interface Ethernet53.42
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.42_vrf_PROD
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 42
+   vrf PROD
+   ip address 172.17.0.7/31
+!
+interface Ethernet53.100
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.100_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 100
+   vrf IT
+   ip address 172.17.0.7/31
 !
 interface Loopback0
    description Router_ID
    no shutdown
-   ip address 192.168.43.1/32
+   ip address 192.168.42.2/32
 !
 interface Vxlan1
-   description cv-pathfinder-transit_VTEP
+   description cv-pathfinder-edge2A_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
    vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
-   vxlan vrf TRANSIT vni 66
 !
 application traffic recognition
    !
@@ -299,20 +309,37 @@ ip routing
 ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
-ip routing vrf TRANSIT
 !
-ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.43.1:422
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:423
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 192.168.43.0/24 eq 32
+   seq 10 permit 192.168.42.0/24 eq 32
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
-   description Deny prefixes from WAN
-   match as-path ASPATH-WAN
+ip prefix-list PL-WAN-HA-PEER-PREFIXES
+   seq 10 permit 172.17.0.8/31
+   seq 20 permit 172.17.0.10/31
+!
+ip prefix-list PL-WAN-HA-PREFIXES
+   seq 10 permit 172.17.0.4/31
+   seq 20 permit 172.17.0.6/31
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
+   description Allow WAN HA peer interface prefixes
+   match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
+   description Allow prefixes originated from the HA peer
+   match extcommunity ECL-EVPN-SOO
+   set as-path match all replacement auto auto
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Use WAN routes from HA peer as backup
+   match as-path ASPATH-WAN
+   set community no-advertise
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.43.1:422 additive
+   set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Advertise local routes towards LAN
@@ -322,9 +349,16 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+   description Advertise WAN HA prefixes towards LAN
+   match ip address prefix-list PL-WAN-HA-PREFIXES
+!
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.43.1:422 additive
+   set extcommunity soo 192.168.42.2:423 additive
+!
+route-map RM-CONN-2-BGP permit 50
+   match ip address prefix-list PL-WAN-HA-PREFIXES
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -335,17 +369,18 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.43.1:422 additive
+   set extcommunity soo 192.168.42.2:423 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
-   router-id 192.168.43.1
+   router-id 192.168.42.2
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
    neighbor IPv4-UNDERLAY-PEERS peer group
+   neighbor IPv4-UNDERLAY-PEERS allowas-in 1
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
@@ -359,6 +394,12 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
+   neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.4 remote-as 65199
+   neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1
+   neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.6 remote-as 65199
+   neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -385,30 +426,35 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS activate
    !
    vrf default
-      rd 192.168.43.1:1
+      rd 192.168.42.2:1
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
    !
    vrf IT
-      rd 192.168.43.1:100
+      rd 192.168.42.2:100
       route-target import evpn 100:100
       route-target export evpn 100:100
-      router-id 192.168.43.1
+      router-id 192.168.42.2
+      neighbor 172.17.0.4 remote-as 65199
+      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.100_vrf_IT
+      neighbor 172.17.0.6 remote-as 65199
+      neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.100_vrf_IT
       redistribute connected
    !
    vrf PROD
-      rd 192.168.43.1:42
+      rd 192.168.42.2:42
       route-target import evpn 42:42
       route-target export evpn 42:42
-      router-id 192.168.43.1
-      redistribute connected
-   !
-   vrf TRANSIT
-      rd 192.168.43.1:66
-      route-target import evpn 66:66
-      route-target export evpn 66:66
-      router-id 192.168.43.1
+      router-id 192.168.42.2
+      neighbor 172.17.0.4 remote-as 65199
+      neighbor 172.17.0.4 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.4 description site-ha-enabled-leaf2A_Ethernet1.42_vrf_PROD
+      neighbor 172.17.0.6 remote-as 65199
+      neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.42_vrf_PROD
       redistribute connected
 !
 router traffic-engineering
@@ -426,7 +472,5 @@ stun
          ip address 10.7.7.7
       server-profile INET-cv-pathfinder-pathfinder-Ethernet3
          ip address 10.9.9.9
-      server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
-         ip address 172.16.0.1
 !
 end
