--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -12,10 +12,15 @@ flow tracking hardware
 !
 service routing protocols model multi-agent
 !
-hostname cv-pathfinder-pathfinder1
+ip as-path access-list ASPATH-WAN permit 65000 any
+!
+hostname cv-pathfinder-transit1B
 !
 router adaptive-virtual-topology
-   topology role pathfinder
+   topology role transit region
+   region AVD_Land_West id 42
+   zone DEFAULT-ZONE id 1
+   site Site422 id 422
    !
    policy DEFAULT-AVT-POLICY
       !
@@ -102,39 +107,47 @@ router adaptive-virtual-topology
       avt profile TRANSIT-AVT-POLICY-VOICE id 42
 !
 router path-selection
-   peer dynamic source stun
    tcp mss ceiling ipv4 ingress
-   !
-   path-group Equinix id 103
    !
    path-group INET id 101
       ipsec profile CP-PROFILE
       !
-      local interface Ethernet1
+      local interface Ethernet1.42
+         stun server-profile INET-cv-pathfinder-pathfinder-Ethernet1 INET-cv-pathfinder-pathfinder-Ethernet3
       !
-      peer static router-ip 6.6.6.6
-         name cv-pathfinder-pathfinder3
-         ipv4 address 10.50.50.50
+      peer dynamic
       !
-      peer static router-ip 192.168.144.3
-         name cv-pathfinder-pathfinder2
+      peer static router-ip 192.168.144.1
+         name cv-pathfinder-pathfinder
+         ipv4 address 10.7.7.7
          ipv4 address 10.9.9.9
    !
    path-group LAN_HA id 65535
       flow assignment lan
-   !
-   path-group LTE id 102
+      !
+      local interface Ethernet52
+      !
+      peer static router-ip 192.168.143.1
+         name cv-pathfinder-transit1A
+         ipv4 address 172.17.0.1
    !
    path-group MPLS id 100
-   !
-   path-group Satellite id 104
+      !
+      local interface Ethernet2.42
+         stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
+      !
+      peer dynamic
+      !
+      peer static router-ip 192.168.144.1
+         name cv-pathfinder-pathfinder
+         ipv4 address 172.16.0.1
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
       path-group LAN_HA
+      path-group MPLS
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
-      path-group Equinix
       path-group INET
       path-group LAN_HA
       path-group MPLS priority 42
@@ -152,7 +165,6 @@ router path-selection
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
       loss-rate 42.0
       path-group LAN_HA
-      path-group LTE
       path-group MPLS
       path-group INET priority 2
    !
@@ -174,21 +186,40 @@ router path-selection
 !
 spanning-tree mode none
 !
-platform sfe data-plane cpu allocation maximum 3
-!
 no enable password
 no aaa root
 !
+vrf instance IT
+!
 vrf instance MGMT
+!
+vrf instance PROD
+!
+vrf instance TRANSIT
 !
 ip security
    !
+   ike policy DP-IKE-POLICY
+      local-id 192.168.143.2
+   !
    ike policy CP-IKE-POLICY
-      local-id 192.168.144.2
+      local-id 192.168.143.2
+   !
+   sa policy DP-SA-POLICY
+      esp encryption aes128
+      pfs dh-group 14
    !
    sa policy CP-SA-POLICY
       esp encryption aes128
       pfs dh-group 14
+   !
+   profile DP-PROFILE
+      ike-policy DP-IKE-POLICY
+      sa-policy DP-SA-POLICY
+      connection start
+      shared-key 7 ABCDEF1234567890666
+      dpd 10 50 clear
+      mode transport
    !
    profile CP-PROFILE
       ike-policy CP-IKE-POLICY
@@ -197,34 +228,79 @@ ip security
       shared-key 7 ABCDEF1234567890
       dpd 10 50 clear
       mode transport
+   !
+   key controller
+      profile DP-PROFILE
 !
 interface Dps1
    description DPS Interface
    mtu 9214
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 192.168.144.2/32
+   ip address 192.168.143.2/32
 !
 interface Ethernet1
    no shutdown
    no switchport
+!
+interface Ethernet1.42
+   no shutdown
+   encapsulation dot1q vlan 42
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 10.8.8.8/31
+   ip address dhcp
+   dhcp client accept default-route
+!
+interface Ethernet2
+   no shutdown
+   no switchport
+!
+interface Ethernet2.42
+   no shutdown
+   encapsulation dot1q vlan 666
+   flow tracker hardware WAN-FLOW-TRACKER
+   ip address 172.16.6.6/31
+!
+interface Ethernet52
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
+   no shutdown
+   mtu 9214
+   no switchport
+   flow tracker hardware WAN-FLOW-TRACKER
+   ip address 172.17.0.3/31
+!
+interface Ethernet52.42
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.42_vrf_PROD
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 42
+   vrf PROD
+   ip address 172.17.0.3/31
+!
+interface Ethernet52.100
+   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.100_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 100
+   vrf IT
+   ip address 172.17.0.3/31
 !
 interface Loopback0
    description Router_ID
    no shutdown
-   ip address 192.168.44.2/32
+   ip address 192.168.43.2/32
 !
 interface Vxlan1
-   description cv-pathfinder-pathfinder1_VTEP
+   description cv-pathfinder-transit1B_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
+   vxlan vrf IT vni 100
+   vxlan vrf PROD vni 42
+   vxlan vrf TRANSIT vni 66
 !
 application traffic recognition
    !
    application ipv4 CONTROL-PLANE-APPLICATION
-      source prefix field-set CONTROL-PLANE-APP-SRC-PREFIXES
+      destination prefix field-set CONTROL-PLANE-APP-DEST-PREFIXES
    !
    application ipv4 CUSTOM-APPLICATION-1
       source prefix field-set CUSTOM-SRC-PREFIX-1
@@ -249,8 +325,8 @@ application traffic recognition
    application-profile VOICE
       application CUSTOM-VOICE-APPLICATION
    !
-   field-set ipv4 prefix CONTROL-PLANE-APP-SRC-PREFIXES
-      192.168.144.2/32
+   field-set ipv4 prefix CONTROL-PLANE-APP-DEST-PREFIXES
+      192.168.144.1/32
    !
    field-set ipv4 prefix CUSTOM-DEST-PREFIX-1
       6.6.6.0/24
@@ -265,32 +341,80 @@ application traffic recognition
       42
 !
 ip routing
+ip routing vrf IT
 no ip routing vrf MGMT
+ip routing vrf PROD
+ip routing vrf TRANSIT
 !
-ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.44.2:0
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.43.1:422
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 192.168.44.0/24 eq 32
+   seq 10 permit 192.168.43.0/24 eq 32
+!
+ip prefix-list PL-WAN-HA-PEER-PREFIXES
+   seq 10 permit 172.17.0.0/31
+!
+ip prefix-list PL-WAN-HA-PREFIXES
+   seq 10 permit 172.17.0.2/31
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
+   description Allow WAN HA peer interface prefixes
+   match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 20
+   description Allow prefixes originated from the HA peer
+   match extcommunity ECL-EVPN-SOO
+   set as-path match all replacement auto auto
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Use WAN routes from HA peer as backup
+   match as-path ASPATH-WAN
+   set community no-advertise
+!
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
+   description Mark prefixes originated from the LAN
+   set extcommunity soo 192.168.43.1:422 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
+   description Advertise local routes towards LAN
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise routes received from WAN iBGP towards LAN
+   match route-type internal
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+   description Advertise WAN HA prefixes towards LAN
+   match ip address prefix-list PL-WAN-HA-PREFIXES
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.44.2:0 additive
+   set extcommunity soo 192.168.43.1:422 additive
+!
+route-map RM-CONN-2-BGP permit 50
+   match ip address prefix-list PL-WAN-HA-PREFIXES
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN deny 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN permit 20
+!
+route-map RM-EVPN-SOO-OUT permit 10
+   set extcommunity soo 192.168.43.1:422 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
-   router-id 192.168.44.2
+   router-id 192.168.43.2
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
-   bgp cluster-id 192.168.44.2
-   bgp listen range 192.168.142.0/24 peer-group WAN-OVERLAY-PEERS remote-as 65000
-   bgp listen range 192.168.143.0/24 peer-group WAN-OVERLAY-PEERS remote-as 65000
    neighbor IPv4-UNDERLAY-PEERS peer group
+   neighbor IPv4-UNDERLAY-PEERS allowas-in 1
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
@@ -298,58 +422,72 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
-   neighbor WAN-OVERLAY-PEERS route-reflector-client
    neighbor WAN-OVERLAY-PEERS bfd
    neighbor WAN-OVERLAY-PEERS bfd interval 1000 min-rx 1000 multiplier 10
    neighbor WAN-OVERLAY-PEERS ttl maximum-hops 1
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-   neighbor WAN-RR-OVERLAY-PEERS peer group
-   neighbor WAN-RR-OVERLAY-PEERS remote-as 65000
-   neighbor WAN-RR-OVERLAY-PEERS update-source Dps1
-   neighbor WAN-RR-OVERLAY-PEERS bfd
-   neighbor WAN-RR-OVERLAY-PEERS bfd interval 2020 min-rx 2000 multiplier 3
-   neighbor WAN-RR-OVERLAY-PEERS ttl maximum-hops 42
-   neighbor WAN-RR-OVERLAY-PEERS send-community
-   neighbor WAN-RR-OVERLAY-PEERS maximum-routes 0
-   neighbor 6.6.6.6 peer group WAN-RR-OVERLAY-PEERS
-   neighbor 6.6.6.6 description cv-pathfinder-pathfinder3
-   neighbor 192.168.144.3 peer group WAN-RR-OVERLAY-PEERS
-   neighbor 192.168.144.3 description cv-pathfinder-pathfinder2
+   neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.2 remote-as 65199
+   neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2
+   neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
+   neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
+      neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor WAN-RR-OVERLAY-PEERS activate
-      next-hop resolution disabled
    !
    address-family ipv4
       neighbor IPv4-UNDERLAY-PEERS activate
       no neighbor WAN-OVERLAY-PEERS activate
-      no neighbor WAN-RR-OVERLAY-PEERS activate
    !
    address-family ipv4 sr-te
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor WAN-RR-OVERLAY-PEERS activate
    !
    address-family link-state
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor WAN-OVERLAY-PEERS missing-policy direction out action deny
-      neighbor WAN-RR-OVERLAY-PEERS activate
-      path-selection role consumer propagator
+      path-selection
    !
    address-family path-selection
       bgp additional-paths receive
       bgp additional-paths send any
       neighbor WAN-OVERLAY-PEERS activate
-      neighbor WAN-RR-OVERLAY-PEERS activate
    !
    vrf default
-      rd 192.168.44.2:1
+      rd 192.168.43.2:1
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
+   !
+   vrf IT
+      rd 192.168.43.2:100
+      route-target import evpn 100:100
+      route-target export evpn 100:100
+      router-id 192.168.43.2
+      neighbor 172.17.0.2 remote-as 65199
+      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
+      redistribute connected
+   !
+   vrf PROD
+      rd 192.168.43.2:42
+      route-target import evpn 42:42
+      route-target export evpn 42:42
+      router-id 192.168.43.2
+      neighbor 172.17.0.2 remote-as 65199
+      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
+      redistribute connected
+   !
+   vrf TRANSIT
+      rd 192.168.43.2:66
+      route-target import evpn 66:66
+      route-target export evpn 66:66
+      router-id 192.168.43.2
+      redistribute connected
 !
 router traffic-engineering
 !
@@ -361,7 +499,12 @@ management api http-commands
       no shutdown
 !
 stun
-   server
-      local-interface Ethernet1
+   client
+      server-profile INET-cv-pathfinder-pathfinder-Ethernet1
+         ip address 10.7.7.7
+      server-profile INET-cv-pathfinder-pathfinder-Ethernet3
+         ip address 10.9.9.9
+      server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
+         ip address 172.16.0.1
 !
 end
