--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/site-ha-enabled-leaf2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/site-ha-enabled-leaf2B.cfg
@@ -6,7 +6,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname site-ha-disabled-leaf
+hostname site-ha-enabled-leaf2B
 !
 no enable password
 no aaa root
@@ -24,60 +24,60 @@ vrf instance MGMT
 vrf instance PROD
 !
 interface Ethernet1
-   description P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52
+   description P2P_LINK_TO_CV-PATHFINDER-EDGE2A_Ethernet53
    no shutdown
    mtu 9214
    no switchport
-   ip address 172.17.0.0/31
+   ip address 172.17.0.6/31
 !
 interface Ethernet1.42
-   description P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.42_vrf_PROD
+   description P2P_LINK_TO_CV-PATHFINDER-EDGE2A_Ethernet53.42_vrf_PROD
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 42
    vrf PROD
-   ip address 172.17.0.0/31
+   ip address 172.17.0.6/31
 !
 interface Ethernet1.100
-   description P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.100_vrf_IT
+   description P2P_LINK_TO_CV-PATHFINDER-EDGE2A_Ethernet53.100_vrf_IT
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 100
    vrf IT
-   ip address 172.17.0.0/31
+   ip address 172.17.0.6/31
 !
 interface Ethernet2
-   description P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52
+   description P2P_LINK_TO_CV-PATHFINDER-EDGE2B_Ethernet53
    no shutdown
    mtu 9214
    no switchport
-   ip address 172.17.0.2/31
+   ip address 172.17.0.10/31
 !
 interface Ethernet2.42
-   description P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.42_vrf_PROD
+   description P2P_LINK_TO_CV-PATHFINDER-EDGE2B_Ethernet53.42_vrf_PROD
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 42
    vrf PROD
-   ip address 172.17.0.2/31
+   ip address 172.17.0.10/31
 !
 interface Ethernet2.100
-   description P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.100_vrf_IT
+   description P2P_LINK_TO_CV-PATHFINDER-EDGE2B_Ethernet53.100_vrf_IT
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 100
    vrf IT
-   ip address 172.17.0.2/31
+   ip address 172.17.0.10/31
 !
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
-   ip address 192.168.45.4/32
+   ip address 192.168.45.3/32
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    no shutdown
-   ip address 192.168.255.4/32
+   ip address 192.168.255.3/32
 !
 interface Vlan100
    description VLAN100
@@ -86,7 +86,7 @@ interface Vlan100
    ip address virtual 10.0.100.1/24
 !
 interface Vxlan1
-   description site-ha-disabled-leaf_VTEP
+   description site-ha-enabled-leaf2B_VTEP
    vxlan source-interface Loopback1
    vxlan udp-port 4789
    vxlan vlan 100 vni 1100
@@ -113,7 +113,7 @@ router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65199
-   router-id 192.168.45.4
+   router-id 192.168.45.3
    maximum-paths 4 ecmp 4
    update wait-install
    no bgp default ipv4-unicast
@@ -126,21 +126,21 @@ router bgp 65199
    neighbor IPv4-UNDERLAY-PEERS peer group
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
-   neighbor 172.17.0.1 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.1 remote-as 65000
-   neighbor 172.17.0.1 description cv-pathfinder-edge_Ethernet52
-   neighbor 172.17.0.3 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.3 remote-as 65000
-   neighbor 172.17.0.3 description cv-pathfinder-edge-no-common-path-group_Ethernet52
+   neighbor 172.17.0.7 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.7 remote-as 65000
+   neighbor 172.17.0.7 description cv-pathfinder-edge2A_Ethernet53
+   neighbor 172.17.0.11 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.11 remote-as 65000
+   neighbor 172.17.0.11 description cv-pathfinder-edge2B_Ethernet53
    redistribute connected route-map RM-CONN-2-BGP
    !
    vlan 100
-      rd 192.168.45.4:1100
+      rd 192.168.45.3:1100
       route-target both 1100:1100
       redistribute learned
    !
    vlan 101
-      rd 192.168.45.4:1101
+      rd 192.168.45.3:1101
       route-target both 1101:1101
       redistribute learned
    !
@@ -152,34 +152,34 @@ router bgp 65199
       neighbor IPv4-UNDERLAY-PEERS activate
    !
    vrf default
-      rd 192.168.45.4:1
+      rd 192.168.45.3:1
       route-target import evpn 1:1
       route-target export evpn 1:1
    !
    vrf IT
-      rd 192.168.45.4:100
+      rd 192.168.45.3:100
       route-target import evpn 100:100
       route-target export evpn 100:100
-      router-id 192.168.45.4
-      neighbor 172.17.0.1 remote-as 65000
-      neighbor 172.17.0.1 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.1 description cv-pathfinder-edge_Ethernet52.100_vrf_IT
-      neighbor 172.17.0.3 remote-as 65000
-      neighbor 172.17.0.3 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.3 description cv-pathfinder-edge-no-common-path-group_Ethernet52.100_vrf_IT
+      router-id 192.168.45.3
+      neighbor 172.17.0.7 remote-as 65000
+      neighbor 172.17.0.7 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.7 description cv-pathfinder-edge2A_Ethernet53.100_vrf_IT
+      neighbor 172.17.0.11 remote-as 65000
+      neighbor 172.17.0.11 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.11 description cv-pathfinder-edge2B_Ethernet53.100_vrf_IT
       redistribute connected
    !
    vrf PROD
-      rd 192.168.45.4:42
+      rd 192.168.45.3:42
       route-target import evpn 42:42
       route-target export evpn 42:42
-      router-id 192.168.45.4
-      neighbor 172.17.0.1 remote-as 65000
-      neighbor 172.17.0.1 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.1 description cv-pathfinder-edge_Ethernet52.42_vrf_PROD
-      neighbor 172.17.0.3 remote-as 65000
-      neighbor 172.17.0.3 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.3 description cv-pathfinder-edge-no-common-path-group_Ethernet52.42_vrf_PROD
+      router-id 192.168.45.3
+      neighbor 172.17.0.7 remote-as 65000
+      neighbor 172.17.0.7 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.7 description cv-pathfinder-edge2A_Ethernet53.42_vrf_PROD
+      neighbor 172.17.0.11 remote-as 65000
+      neighbor 172.17.0.11 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.11 description cv-pathfinder-edge2B_Ethernet53.42_vrf_PROD
       redistribute connected
 !
 management api http-commands
