--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -1,8 +1,8 @@
-hostname: cv-pathfinder-edge
+hostname: cv-pathfinder-edge2B
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.42.1
+  router_id: 192.168.42.3
   bgp:
     default:
       ipv4_unicast: false
@@ -17,6 +17,9 @@ router_bgp:
     send_community: all
     route_map_in: RM-BGP-UNDERLAY-PEERS-IN
     route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
+    allowas_in:
+      enabled: true
+      times: 1
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -39,27 +42,34 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
-  - source_protocol: static
-    route_map: RM-STATIC-2-BGP
   neighbors:
-  - ip_address: 172.17.0.0
+  - ip_address: 172.17.0.8
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65199'
-    peer: site-ha-disabled-leaf
-    description: site-ha-disabled-leaf_Ethernet1
+    peer: site-ha-enabled-leaf2A
+    description: site-ha-enabled-leaf2A_Ethernet2
+  - ip_address: 172.17.0.10
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65199'
+    peer: site-ha-enabled-leaf2B
+    description: site-ha-enabled-leaf2B_Ethernet2
   - ip_address: 192.168.144.1
     peer_group: WAN-OVERLAY-PEERS
     peer: cv-pathfinder-pathfinder
     description: cv-pathfinder-pathfinder
   vrfs:
   - name: IT
-    router_id: 192.168.42.1
+    router_id: 192.168.42.3
     neighbors:
-    - ip_address: 172.17.0.0
+    - ip_address: 172.17.0.8
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65199'
-      description: site-ha-disabled-leaf_Ethernet1.100_vrf_IT
-    rd: 192.168.42.1:100
+      description: site-ha-enabled-leaf2A_Ethernet2.100_vrf_IT
+    - ip_address: 172.17.0.10
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65199'
+      description: site-ha-enabled-leaf2B_Ethernet2.100_vrf_IT
+    rd: 192.168.42.3:100
     route_targets:
       import:
       - address_family: evpn
@@ -72,13 +82,17 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: PROD
-    router_id: 192.168.42.1
+    router_id: 192.168.42.3
     neighbors:
-    - ip_address: 172.17.0.0
+    - ip_address: 172.17.0.8
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65199'
-      description: site-ha-disabled-leaf_Ethernet1.42_vrf_PROD
-    rd: 192.168.42.1:42
+      description: site-ha-enabled-leaf2A_Ethernet2.42_vrf_PROD
+    - ip_address: 172.17.0.10
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65199'
+      description: site-ha-enabled-leaf2B_Ethernet2.42_vrf_PROD
+    rd: 192.168.42.3:42
     route_targets:
       import:
       - address_family: evpn
@@ -91,7 +105,7 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: default
-    rd: 192.168.42.1:1
+    rd: 192.168.42.3:1
     route_targets:
       import:
       - address_family: evpn
@@ -148,56 +162,74 @@ management_api_http:
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet52
-  peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1
+  peer: site-ha-enabled-leaf2A
+  peer_interface: Ethernet2
   peer_type: l3leaf
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet2
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.1/31
+  ip_address: 172.17.0.9/31
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 - name: Ethernet52.100
-  peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1.100
+  peer: site-ha-enabled-leaf2A
+  peer_interface: Ethernet2.100
   peer_type: l3leaf
   vrf: IT
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.100_vrf_IT
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet2.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.1/31
+  ip_address: 172.17.0.9/31
 - name: Ethernet52.42
-  peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1.42
+  peer: site-ha-enabled-leaf2A
+  peer_interface: Ethernet2.42
   peer_type: l3leaf
   vrf: PROD
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.42_vrf_PROD
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet2.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.1/31
-- name: Ethernet1
-  peer_type: l3_interface
-  ip_address: dhcp
+  ip_address: 172.17.0.9/31
+- name: Ethernet53
+  peer: site-ha-enabled-leaf2B
+  peer_interface: Ethernet2
+  peer_type: l3leaf
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet2
   shutdown: false
+  mtu: 9214
   type: routed
-  dhcp_client_accept_default_route: true
+  ip_address: 172.17.0.11/31
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
+- name: Ethernet53.100
+  peer: site-ha-enabled-leaf2B
+  peer_interface: Ethernet2.100
+  peer_type: l3leaf
+  vrf: IT
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet2.100_vrf_IT
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 100
+  mtu: 9214
+  ip_address: 172.17.0.11/31
+- name: Ethernet53.42
+  peer: site-ha-enabled-leaf2B
+  peer_interface: Ethernet2.42
+  peer_type: l3leaf
+  vrf: PROD
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet2.42_vrf_PROD
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 42
+  mtu: 9214
+  ip_address: 172.17.0.11/31
 - name: Ethernet2
   peer_type: l3_interface
-  ip_address: 172.15.5.5/31
-  shutdown: false
-  type: routed
-  flow_tracker:
-    hardware: WAN-FLOW-TRACKER
-- name: Ethernet3
-  peer_type: l3_interface
-  ip_address: 172.20.20.20/31
+  ip_address: 172.15.6.6/31
   shutdown: false
   type: routed
   flow_tracker:
@@ -206,7 +238,7 @@ loopback_interfaces:
 - name: Loopback0
   description: Router_ID
   shutdown: false
-  ip_address: 192.168.42.1/32
+  ip_address: 192.168.42.3/32
 as_path:
   access_lists:
   - name: ASPATH-WAN
@@ -218,10 +250,18 @@ prefix_lists:
   sequence_numbers:
   - sequence: 10
     action: permit 192.168.42.0/24 eq 32
-- name: PL-STATIC-VRF-DEFAULT
+- name: PL-WAN-HA-PREFIXES
   sequence_numbers:
   - sequence: 10
-    action: permit 66.66.66.0/24
+    action: permit 172.17.0.8/31
+  - sequence: 20
+    action: permit 172.17.0.10/31
+- name: PL-WAN-HA-PEER-PREFIXES
+  sequence_numbers:
+  - sequence: 10
+    action: permit 172.17.0.4/31
+  - sequence: 20
+    action: permit 172.17.0.6/31
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -230,14 +270,37 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity soo 192.168.42.2:423 additive
+  - sequence: 50
+    type: permit
+    match:
+    - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
   - sequence: 40
     type: permit
     description: Mark prefixes originated from the LAN
     set:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity soo 192.168.42.2:423 additive
+  - sequence: 10
+    type: permit
+    description: Allow WAN HA peer interface prefixes
+    match:
+    - ip address prefix-list PL-WAN-HA-PEER-PREFIXES
+  - sequence: 20
+    type: permit
+    description: Allow prefixes originated from the HA peer
+    match:
+    - extcommunity ECL-EVPN-SOO
+    set:
+    - as-path match all replacement auto auto
+  - sequence: 30
+    type: permit
+    description: Use WAN routes from HA peer as backup
+    match:
+    - as-path ASPATH-WAN
+    set:
+    - community no-advertise
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
   - sequence: 10
@@ -250,6 +313,11 @@ route_maps:
     description: Advertise routes received from WAN iBGP towards LAN
     match:
     - route-type internal
+  - sequence: 30
+    type: permit
+    description: Advertise WAN HA prefixes towards LAN
+    match:
+    - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-EVPN-SOO-IN
   sequence_numbers:
   - sequence: 10
@@ -263,27 +331,13 @@ route_maps:
   - sequence: 10
     type: permit
     set:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity soo 192.168.42.2:423 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
-- name: RM-STATIC-2-BGP
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    match:
-    - ip address prefix-list PL-STATIC-VRF-DEFAULT
-    set:
-    - extcommunity soo 192.168.42.1:511 additive
-static_routes:
-- destination_address_prefix: 172.16.0.0/16
-  gateway: 172.16.5.4
-- destination_address_prefix: 66.66.66.0/24
-  gateway: 172.17.0.0
-  vrf: default
 flow_tracking:
   hardware:
     trackers:
@@ -302,11 +356,13 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.42.1:511
+    extcommunities: soo 192.168.42.2:423
 ip_security:
   ike_policies:
+  - name: DP-IKE-POLICY
+    local_id: 192.168.142.3
   - name: CP-IKE-POLICY
-    local_id: 192.168.142.1
+    local_id: 192.168.142.3
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -318,6 +374,7 @@ ip_security:
     pfs_dh_group: 14
   profiles:
   - name: DP-PROFILE
+    ike_policy: DP-IKE-POLICY
     sa_policy: DP-SA-POLICY
     connection: start
     shared_key: ABCDEF1234567890666
@@ -341,14 +398,14 @@ ip_security:
 router_adaptive_virtual_topology:
   topology_role: edge
   region:
-    name: AVD_Land_East
-    id: 43
+    name: AVD_Land_West
+    id: 42
   zone:
     name: DEFAULT-ZONE
     id: 1
   site:
-    name: Site511
-    id: 511
+    name: Site423
+    id: 423
   profiles:
   - name: CONTROL-PLANE-PROFILE
     load_balance_policy: LB-CONTROL-PLANE-PROFILE
@@ -420,23 +477,6 @@ router_path_selection:
   tcp_mss_ceiling:
     ipv4_segment_size: auto
   path_groups:
-  - name: INET
-    id: 101
-    local_interfaces:
-    - name: Ethernet1
-      stun:
-        server_profiles:
-        - INET-cv-pathfinder-pathfinder-Ethernet1
-        - INET-cv-pathfinder-pathfinder-Ethernet3
-    dynamic_peers:
-      enabled: true
-    static_peers:
-    - router_ip: 192.168.144.1
-      name: cv-pathfinder-pathfinder
-      ipv4_addresses:
-      - 10.7.7.7
-      - 10.9.9.9
-    ipsec_profile: CP-PROFILE
   - name: MPLS
     id: 100
     local_interfaces:
@@ -451,43 +491,46 @@ router_path_selection:
       name: cv-pathfinder-pathfinder
       ipv4_addresses:
       - 172.16.0.1
-  - name: LTE
-    id: 102
+  - name: LAN_HA
+    id: 65535
+    flow_assignment: lan
     local_interfaces:
-    - name: Ethernet3
-    dynamic_peers:
-      enabled: true
-    ipsec_profile: CP-PROFILE
+    - name: Ethernet52
+    - name: Ethernet53
+    static_peers:
+    - router_ip: 192.168.142.2
+      name: cv-pathfinder-edge2A
+      ipv4_addresses:
+      - 172.17.0.5
+      - 172.17.0.7
+    ipsec_profile: DP-PROFILE
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
-    - name: INET
+    - name: LAN_HA
     - name: MPLS
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
+    - name: LAN_HA
     - name: MPLS
-    - name: INET
-      priority: 2
     jitter: 42
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
+    - name: LAN_HA
     - name: MPLS
-    - name: LTE
-    - name: INET
-      priority: 2
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
-    - name: INET
+    - name: LAN_HA
     - name: MPLS
       priority: 2
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
+    - name: LAN_HA
     - name: MPLS
-    - name: INET
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
-    - name: INET
+    - name: LAN_HA
     - name: MPLS
       priority: 42
 router_traffic_engineering:
@@ -495,10 +538,6 @@ router_traffic_engineering:
 stun:
   client:
     server_profiles:
-    - name: INET-cv-pathfinder-pathfinder-Ethernet1
-      ip_address: 10.7.7.7
-    - name: INET-cv-pathfinder-pathfinder-Ethernet3
-      ip_address: 10.9.9.9
     - name: MPLS-cv-pathfinder-pathfinder-Ethernet2
       ip_address: 172.16.0.1
 application_traffic_recognition:
@@ -557,12 +596,12 @@ dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9214
-  ip_address: 192.168.142.1/32
+  ip_address: 192.168.142.3/32
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
-    description: cv-pathfinder-edge_VTEP
+    description: cv-pathfinder-edge2B_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
@@ -579,24 +618,20 @@ metadata:
     - name: Role
       value: edge
     - name: Region
-      value: AVD_Land_East
+      value: AVD_Land_West
     - name: Zone
       value: DEFAULT-ZONE
     - name: Site
-      value: Site511
+      value: Site423
     interface_tags:
     - interface: Ethernet52
       tags:
       - name: Type
         value: lan
-    - interface: Ethernet1
+    - interface: Ethernet53
       tags:
       - name: Type
-        value: wan
-      - name: Carrier
-        value: ATT
-      - name: Circuit
-        value: '666'
+        value: lan
     - interface: Ethernet2
       tags:
       - name: Type
@@ -604,33 +639,17 @@ metadata:
       - name: Carrier
         value: Colt
       - name: Circuit
-        value: '10555'
-    - interface: Ethernet3
-      tags:
-      - name: Type
-        value: wan
-      - name: Carrier
-        value: Comcast-5G
-      - name: Circuit
-        value: AF830
+        value: '10423'
   cv_pathfinder:
     role: edge
-    vtep_ip: 192.168.142.1
-    region: AVD_Land_East
+    vtep_ip: 192.168.142.3
+    region: AVD_Land_West
     zone: DEFAULT-ZONE
-    site: Site511
+    site: Site423
     interfaces:
-    - name: Ethernet1
-      carrier: ATT
-      circuit_id: '666'
-      pathgroup: INET
     - name: Ethernet2
       carrier: Colt
-      circuit_id: '10555'
+      circuit_id: '10423'
       pathgroup: MPLS
-    - name: Ethernet3
-      carrier: Comcast-5G
-      circuit_id: AF830
-      pathgroup: LTE
     pathfinders:
     - vtep_ip: 192.168.144.1
