--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
@@ -334,20 +334,26 @@ router_path_selection:
     id: 103
   - name: Satellite
     id: 104
+  - name: LAN_HA
+    id: 65535
+    flow_assignment: lan
   peer_dynamic_source: stun
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: MPLS
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
+    - name: LAN_HA
     - name: MPLS
     - name: INET
       priority: 2
     jitter: 42
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
+    - name: LAN_HA
     - name: MPLS
     - name: LTE
     - name: INET
@@ -355,26 +361,31 @@ router_path_selection:
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: MPLS
       priority: 2
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
+    - name: LAN_HA
     - name: MPLS
     - name: INET
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: Equinix
     - name: MPLS
       priority: 42
   - name: LB-TRANSIT-AVT-POLICY-VOICE
     path_groups:
+    - name: LAN_HA
     - name: MPLS
     - name: INET
       priority: 2
   - name: LB-TRANSIT-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: MPLS
       priority: 2
@@ -541,6 +552,8 @@ metadata:
       - id: 254
         name: CONTROL-PLANE-PROFILE
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: INET
           preference: preferred
         - name: MPLS
@@ -548,6 +561,8 @@ metadata:
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
@@ -555,6 +570,8 @@ metadata:
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: INET
           preference: preferred
         - name: Equinix
@@ -569,6 +586,8 @@ metadata:
         id: 2
         name: PROD-AVT-POLICY-VOICE
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
@@ -576,6 +595,8 @@ metadata:
       - id: 4
         name: PROD-AVT-POLICY-VIDEO
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: MPLS
           preference: preferred
         - name: LTE
@@ -585,6 +606,8 @@ metadata:
       - id: 1
         name: PROD-AVT-POLICY-DEFAULT
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: INET
           preference: preferred
         - name: MPLS
@@ -595,6 +618,8 @@ metadata:
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
@@ -602,6 +627,8 @@ metadata:
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: INET
           preference: preferred
         - name: Equinix
@@ -614,6 +641,8 @@ metadata:
       - id: 42
         name: TRANSIT-AVT-POLICY-VOICE
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
@@ -621,6 +650,8 @@ metadata:
       - id: 1
         name: TRANSIT-AVT-POLICY-DEFAULT
         pathgroups:
+        - name: LAN_HA
+          preference: preferred
         - name: INET
           preference: preferred
         - name: MPLS
