--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1B.yml
@@ -1,8 +1,8 @@
-hostname: cv-pathfinder-edge
+hostname: cv-pathfinder-transit1B
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.42.1
+  router_id: 192.168.43.2
   bgp:
     default:
       ipv4_unicast: false
@@ -17,6 +17,9 @@ router_bgp:
     send_community: all
     route_map_in: RM-BGP-UNDERLAY-PEERS-IN
     route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
+    allowas_in:
+      enabled: true
+      times: 1
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -39,27 +42,25 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
-  - source_protocol: static
-    route_map: RM-STATIC-2-BGP
   neighbors:
-  - ip_address: 172.17.0.0
+  - ip_address: 172.17.0.2
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65199'
-    peer: site-ha-disabled-leaf
-    description: site-ha-disabled-leaf_Ethernet1
+    peer: site-ha-enabled-leaf1
+    description: site-ha-enabled-leaf1_Ethernet2
   - ip_address: 192.168.144.1
     peer_group: WAN-OVERLAY-PEERS
     peer: cv-pathfinder-pathfinder
     description: cv-pathfinder-pathfinder
   vrfs:
   - name: IT
-    router_id: 192.168.42.1
+    router_id: 192.168.43.2
     neighbors:
-    - ip_address: 172.17.0.0
+    - ip_address: 172.17.0.2
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65199'
-      description: site-ha-disabled-leaf_Ethernet1.100_vrf_IT
-    rd: 192.168.42.1:100
+      description: site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
+    rd: 192.168.43.2:100
     route_targets:
       import:
       - address_family: evpn
@@ -72,13 +73,13 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: PROD
-    router_id: 192.168.42.1
+    router_id: 192.168.43.2
     neighbors:
-    - ip_address: 172.17.0.0
+    - ip_address: 172.17.0.2
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65199'
-      description: site-ha-disabled-leaf_Ethernet1.42_vrf_PROD
-    rd: 192.168.42.1:42
+      description: site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
+    rd: 192.168.43.2:42
     route_targets:
       import:
       - address_family: evpn
@@ -91,7 +92,7 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: default
-    rd: 192.168.42.1:1
+    rd: 192.168.43.2:1
     route_targets:
       import:
       - address_family: evpn
@@ -102,6 +103,20 @@ router_bgp:
         route_targets:
         - '1:1'
         - route-map RM-EVPN-EXPORT-VRF-DEFAULT
+  - name: TRANSIT
+    router_id: 192.168.43.2
+    rd: 192.168.43.2:66
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 66:66
+      export:
+      - address_family: evpn
+        route_targets:
+        - 66:66
+    redistribute_routes:
+    - source_protocol: connected
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -142,71 +157,77 @@ vrfs:
 - name: PROD
   tenant: TenantA
   ip_routing: true
+- name: TRANSIT
+  tenant: TenantB
+  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet52
-  peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1
+  peer: site-ha-enabled-leaf1
+  peer_interface: Ethernet2
   peer_type: l3leaf
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.1/31
+  ip_address: 172.17.0.3/31
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 - name: Ethernet52.100
-  peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1.100
+  peer: site-ha-enabled-leaf1
+  peer_interface: Ethernet2.100
   peer_type: l3leaf
   vrf: IT
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.100_vrf_IT
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.1/31
+  ip_address: 172.17.0.3/31
 - name: Ethernet52.42
-  peer: site-ha-disabled-leaf
-  peer_interface: Ethernet1.42
+  peer: site-ha-enabled-leaf1
+  peer_interface: Ethernet2.42
   peer_type: l3leaf
   vrf: PROD
-  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet1.42_vrf_PROD
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.1/31
-- name: Ethernet1
+  ip_address: 172.17.0.3/31
+- name: Ethernet1.42
   peer_type: l3_interface
   ip_address: dhcp
   shutdown: false
-  type: routed
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 42
   dhcp_client_accept_default_route: true
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
+- name: Ethernet2.42
+  peer_type: l3_interface
+  ip_address: 172.16.6.6/31
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 666
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
+- name: Ethernet1
+  type: routed
+  peer_type: l3_interface
+  shutdown: false
 - name: Ethernet2
-  peer_type: l3_interface
-  ip_address: 172.15.5.5/31
-  shutdown: false
   type: routed
-  flow_tracker:
-    hardware: WAN-FLOW-TRACKER
-- name: Ethernet3
   peer_type: l3_interface
-  ip_address: 172.20.20.20/31
   shutdown: false
-  type: routed
-  flow_tracker:
-    hardware: WAN-FLOW-TRACKER
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
   shutdown: false
-  ip_address: 192.168.42.1/32
+  ip_address: 192.168.43.2/32
 as_path:
   access_lists:
   - name: ASPATH-WAN
@@ -217,11 +238,15 @@ prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
   - sequence: 10
-    action: permit 192.168.42.0/24 eq 32
-- name: PL-STATIC-VRF-DEFAULT
+    action: permit 192.168.43.0/24 eq 32
+- name: PL-WAN-HA-PREFIXES
   sequence_numbers:
   - sequence: 10
-    action: permit 66.66.66.0/24
+    action: permit 172.17.0.2/31
+- name: PL-WAN-HA-PEER-PREFIXES
+  sequence_numbers:
+  - sequence: 10
+    action: permit 172.17.0.0/31
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -230,14 +255,37 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity soo 192.168.43.1:422 additive
+  - sequence: 50
+    type: permit
+    match:
+    - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
   - sequence: 40
     type: permit
     description: Mark prefixes originated from the LAN
     set:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity soo 192.168.43.1:422 additive
+  - sequence: 10
+    type: permit
+    description: Allow WAN HA peer interface prefixes
+    match:
+    - ip address prefix-list PL-WAN-HA-PEER-PREFIXES
+  - sequence: 20
+    type: permit
+    description: Allow prefixes originated from the HA peer
+    match:
+    - extcommunity ECL-EVPN-SOO
+    set:
+    - as-path match all replacement auto auto
+  - sequence: 30
+    type: permit
+    description: Use WAN routes from HA peer as backup
+    match:
+    - as-path ASPATH-WAN
+    set:
+    - community no-advertise
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
   - sequence: 10
@@ -250,6 +298,11 @@ route_maps:
     description: Advertise routes received from WAN iBGP towards LAN
     match:
     - route-type internal
+  - sequence: 30
+    type: permit
+    description: Advertise WAN HA prefixes towards LAN
+    match:
+    - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-EVPN-SOO-IN
   sequence_numbers:
   - sequence: 10
@@ -263,27 +316,13 @@ route_maps:
   - sequence: 10
     type: permit
     set:
-    - extcommunity soo 192.168.42.1:511 additive
+    - extcommunity soo 192.168.43.1:422 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
-- name: RM-STATIC-2-BGP
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    match:
-    - ip address prefix-list PL-STATIC-VRF-DEFAULT
-    set:
-    - extcommunity soo 192.168.42.1:511 additive
-static_routes:
-- destination_address_prefix: 172.16.0.0/16
-  gateway: 172.16.5.4
-- destination_address_prefix: 66.66.66.0/24
-  gateway: 172.17.0.0
-  vrf: default
 flow_tracking:
   hardware:
     trackers:
@@ -302,11 +341,13 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.42.1:511
+    extcommunities: soo 192.168.43.1:422
 ip_security:
   ike_policies:
+  - name: DP-IKE-POLICY
+    local_id: 192.168.143.2
   - name: CP-IKE-POLICY
-    local_id: 192.168.142.1
+    local_id: 192.168.143.2
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -318,6 +359,7 @@ ip_security:
     pfs_dh_group: 14
   profiles:
   - name: DP-PROFILE
+    ike_policy: DP-IKE-POLICY
     sa_policy: DP-SA-POLICY
     connection: start
     shared_key: ABCDEF1234567890666
@@ -339,16 +381,16 @@ ip_security:
   key_controller:
     profile: DP-PROFILE
 router_adaptive_virtual_topology:
-  topology_role: edge
+  topology_role: transit region
   region:
-    name: AVD_Land_East
-    id: 43
+    name: AVD_Land_West
+    id: 42
   zone:
     name: DEFAULT-ZONE
     id: 1
   site:
-    name: Site511
-    id: 511
+    name: Site422
+    id: 422
   profiles:
   - name: CONTROL-PLANE-PROFILE
     load_balance_policy: LB-CONTROL-PLANE-PROFILE
@@ -362,6 +404,10 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-DEFAULT-AVT-POLICY-VIDEO
   - name: DEFAULT-AVT-POLICY-DEFAULT
     load_balance_policy: LB-DEFAULT-AVT-POLICY-DEFAULT
+  - name: TRANSIT-AVT-POLICY-VOICE
+    load_balance_policy: LB-TRANSIT-AVT-POLICY-VOICE
+  - name: TRANSIT-AVT-POLICY-DEFAULT
+    load_balance_policy: LB-TRANSIT-AVT-POLICY-DEFAULT
   vrfs:
   - name: default
     policy: DEFAULT-AVT-POLICY-WITH-CP
@@ -388,6 +434,13 @@ router_adaptive_virtual_topology:
       id: 3
     - name: DEFAULT-AVT-POLICY-DEFAULT
       id: 1
+  - name: TRANSIT
+    policy: TRANSIT-AVT-POLICY
+    profiles:
+    - name: TRANSIT-AVT-POLICY-VOICE
+      id: 42
+    - name: TRANSIT-AVT-POLICY-DEFAULT
+      id: 1
   policies:
   - name: PROD-AVT-POLICY
     matches:
@@ -403,6 +456,12 @@ router_adaptive_virtual_topology:
       avt_profile: DEFAULT-AVT-POLICY-VIDEO
     - application_profile: default
       avt_profile: DEFAULT-AVT-POLICY-DEFAULT
+  - name: TRANSIT-AVT-POLICY
+    matches:
+    - application_profile: VOICE
+      avt_profile: TRANSIT-AVT-POLICY-VOICE
+    - application_profile: default
+      avt_profile: TRANSIT-AVT-POLICY-DEFAULT
   - name: DEFAULT-AVT-POLICY-WITH-CP
     matches:
     - application_profile: CONTROL-PLANE-APPLICATION-PROFILE
@@ -423,7 +482,7 @@ router_path_selection:
   - name: INET
     id: 101
     local_interfaces:
-    - name: Ethernet1
+    - name: Ethernet1.42
       stun:
         server_profiles:
         - INET-cv-pathfinder-pathfinder-Ethernet1
@@ -440,7 +499,7 @@ router_path_selection:
   - name: MPLS
     id: 100
     local_interfaces:
-    - name: Ethernet2
+    - name: Ethernet2.42
       stun:
         server_profiles:
         - MPLS-cv-pathfinder-pathfinder-Ethernet2
@@ -451,45 +510,65 @@ router_path_selection:
       name: cv-pathfinder-pathfinder
       ipv4_addresses:
       - 172.16.0.1
-  - name: LTE
-    id: 102
+  - name: LAN_HA
+    id: 65535
+    flow_assignment: lan
     local_interfaces:
-    - name: Ethernet3
-    dynamic_peers:
-      enabled: true
-    ipsec_profile: CP-PROFILE
+    - name: Ethernet52
+    static_peers:
+    - router_ip: 192.168.143.1
+      name: cv-pathfinder-transit1A
+      ipv4_addresses:
+      - 172.17.0.1
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: MPLS
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
+    - name: LAN_HA
     - name: MPLS
     - name: INET
       priority: 2
     jitter: 42
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
+    - name: LAN_HA
     - name: MPLS
-    - name: LTE
     - name: INET
       priority: 2
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: MPLS
       priority: 2
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
+    - name: LAN_HA
     - name: MPLS
     - name: INET
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
     - name: MPLS
       priority: 42
+  - name: LB-TRANSIT-AVT-POLICY-VOICE
+    path_groups:
+    - name: LAN_HA
+    - name: MPLS
+    - name: INET
+      priority: 2
+  - name: LB-TRANSIT-AVT-POLICY-DEFAULT
+    path_groups:
+    - name: LAN_HA
+    - name: INET
+    - name: MPLS
+      priority: 2
 router_traffic_engineering:
   enabled: true
 stun:
@@ -557,12 +636,12 @@ dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9214
-  ip_address: 192.168.142.1/32
+  ip_address: 192.168.143.2/32
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
-    description: cv-pathfinder-edge_VTEP
+    description: cv-pathfinder-transit1B_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
@@ -573,17 +652,19 @@ vxlan_interface:
         vni: 100
       - name: PROD
         vni: 42
+      - name: TRANSIT
+        vni: 66
 metadata:
   cv_tags:
     device_tags:
     - name: Role
-      value: edge
+      value: transit region
     - name: Region
-      value: AVD_Land_East
+      value: AVD_Land_West
     - name: Zone
       value: DEFAULT-ZONE
     - name: Site
-      value: Site511
+      value: Site422
     interface_tags:
     - interface: Ethernet52
       tags:
@@ -592,45 +673,24 @@ metadata:
     - interface: Ethernet1
       tags:
       - name: Type
-        value: wan
-      - name: Carrier
-        value: ATT
-      - name: Circuit
-        value: '666'
+        value: lan
     - interface: Ethernet2
       tags:
       - name: Type
-        value: wan
-      - name: Carrier
-        value: Colt
-      - name: Circuit
-        value: '10555'
-    - interface: Ethernet3
-      tags:
-      - name: Type
-        value: wan
-      - name: Carrier
-        value: Comcast-5G
-      - name: Circuit
-        value: AF830
+        value: lan
   cv_pathfinder:
-    role: edge
-    vtep_ip: 192.168.142.1
-    region: AVD_Land_East
+    role: transit region
+    vtep_ip: 192.168.143.2
+    region: AVD_Land_West
     zone: DEFAULT-ZONE
-    site: Site511
+    site: Site422
     interfaces:
-    - name: Ethernet1
-      carrier: ATT
-      circuit_id: '666'
+    - name: Ethernet1.42
+      carrier: Comcast
       pathgroup: INET
-    - name: Ethernet2
+    - name: Ethernet2.42
       carrier: Colt
-      circuit_id: '10555'
+      circuit_id: '10666'
       pathgroup: MPLS
-    - name: Ethernet3
-      carrier: Comcast-5G
-      circuit_id: AF830
-      pathgroup: LTE
     pathfinders:
     - vtep_ip: 192.168.144.1
