--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -290,16 +290,18 @@ all:
                 autovpn-rr2:
                 autovpn-edge:
             CV_PATHFINDER_TESTS:
-              hosts:
-                cv-pathfinder-transit:
               children:
-                # TODO HA PR
-                #SITE_HA_ENABLED:
-                #  hosts:
-                #    cv-pathfinder-edge2:
-                #    cv-pathfinder-edge3:
-                #    site-ha-enabled-leaf1:
-                #    site-ha-enabled-leaf2:
+                SITE_HA_ENABLED:
+                  hosts:
+                    cv-pathfinder-edge2A:
+                    cv-pathfinder-edge2B:
+                    site-ha-enabled-leaf2A:
+                    site-ha-enabled-leaf2B:
+                TRANSIT_SITE_HA_ENABLED:
+                  hosts:
+                    cv-pathfinder-transit1A:
+                    cv-pathfinder-transit1B:
+                    site-ha-enabled-leaf1:
                 SITE_HA_DISABLED:
                   hosts:
                     cv-pathfinder-edge:
