Refactor cv_pathfinder logic

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7536,10 +7536,8 @@ $defs:
               table: node-type-wan-configuration
             type: str
             valid_values:
-            - none
-            - zone
             - region
-            default: none
+            - zone
             description: 'PREVIEW: This key is currently not supported
 
               Configure the transit mode for a WAN client for CV Pathfinder designs
@@ -7547,7 +7545,7 @@ $defs:
               only when the `wan_mode` root key is set to `cv_pathfinder`.
 
 
-              ''zone'' is not supported today.'
+              ''zone'' is currently not supported.'
           cv_pathfinder_region:
             documentation_options:
               table: node-type-wan-configuration
