Support for EVPN Multihoming IP Mass-withdrawal.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-vpn-import-pruning.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-vpn-import-pruning.yml
@@ -45,6 +45,8 @@ router_bgp:
       threshold: 1
     route:
       import_match_failure_action: discard
+      import_ethernet_segment_ip_mass_withdraw: true
+      export_ethernet_segment_ip_mass_withdraw: true
   address_family_ipv4:
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
