Added l2 inband ztp functionality

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/INBAND_MGMT_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/INBAND_MGMT_TESTS.yml
@@ -25,6 +25,7 @@ l3leaf:
       only_vlans_in_use: true
   nodes:
     - name: inband-mgmt-parent
+      inband_ztp_parent: true
       id: 1
     - name: inband-mgmt-parent-vrf
       inband_mgmt_vrf: INBANDMGMT
