--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7245,6 +7245,15 @@ $defs:
               it must be set on each applicable node/node-group/node-type as needed.'
             type: int
             default: 1500
+          inband_ztp_parent:
+            documentation_options:
+              table: node-type-inband-management-configuration
+            description: 'Enable to allow downstream devices to ZTP inband
+
+              This setting also requires that the inband_mgmt_vlan is set for the
+              downstream device.'
+            type: bool
+            default: false
           inband_management_subnet:
             documentation_options:
               table: node-type-inband-management-configuration
