--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -878,6 +878,14 @@ $defs:
               This setting is only applied on the devices where it is set, it does not automatically affect any parent/child devices configuration, so it must be set on each applicable node/node-group/node-type as needed.
             type: int
             default: 1500
+          inband_ztp_parent:
+            documentation_options:
+              table: node-type-inband-management-configuration
+            description: |-
+              Enable to allow downstream devices to ZTP inband
+              This setting also requires that the inband_mgmt_vlan is set for the downstream device.
+            type: bool
+            default: false
           inband_management_subnet:
             documentation_options:
               table: node-type-inband-management-configuration
