Refactor(eos_designs): Better security for IPsec configuration for WAN (#3543)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -194,7 +194,7 @@ ip security
       local-id 192.168.144.3
    !
    sa policy CP-SA-POLICY
-      esp encryption aes128
+      esp encryption aes256gcm128
       pfs dh-group 14
    !
    profile CP-PROFILE
