--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -184,7 +184,7 @@ ip security
       local-id 192.168.144.1
    !
    sa policy CP-SA-POLICY
-      esp encryption aes128
+      esp encryption aes256gcm128
       pfs dh-group 14
    !
    profile CP-PROFILE
